# CENG477HW1

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Cube.cpp  Cube.h  Makefile  Material.h  Mesh.cpp  Mesh.h  PointLight.h  Ray.h  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Transformation.cpp  Transformation.h  Translation.cpp  Translation.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  Vertex.h  att_test_1.ppm  four_cubes.sh  four_cubes_029.txt  four_cubes_2.sh  four_cubes_ilk.sh  main.cpp  spheres.ppm
input/scenes/four_cubes/: four_cubes_001.txt  four_cubes_002.txt  four_cubes_003.txt  four_cubes_004.txt  four_cubes_005.txt  four_cubes_007.txt  four_cubes_008.txt  four_cubes_009.txt  four_cubes_012.txt  four_cubes_013.txt  four_cubes_014.txt  four_cubes_015.txt  four_cubes_018.txt  four_cubes_020.txt  four_cubes_021.txt  four_cubes_023.txt  four_cubes_024.txt  four_cubes_027.txt  four_cubes_029.txt  four_cubes_030.txt  four_cubes_032.txt  four_cubes_034.txt  four_cubes_035.txt  four_cubes_038.txt  four_cubes_039.txt  four_cubes_041.txt  four_cubes_042.txt  four_cubes_043.txt  four_cubes_044.txt  four_cubes_045.txt  four_cubes_046.txt  four_cubes_047.txt  four_cubes_048.txt  four_cubes_050.txt  four_cubes_051.txt  four_cubes_052.txt  four_cubes_053.txt  four_cubes_055.txt  four_cubes_056.txt  four_cubes_057.txt  (+36 more)
input_thx/scenes/four_cubes/: four_cubes_000.txt  four_cubes_006.txt  four_cubes_010.txt  four_cubes_011.txt  four_cubes_016.txt  four_cubes_017.txt  four_cubes_019.txt  four_cubes_022.txt  four_cubes_025.txt  four_cubes_026.txt  four_cubes_028.txt  four_cubes_031.txt  four_cubes_033.txt  four_cubes_036.txt  four_cubes_037.txt  four_cubes_040.txt  four_cubes_049.txt  four_cubes_054.txt  four_cubes_061.txt  four_cubes_063.txt  four_cubes_069.txt  four_cubes_070.txt  four_cubes_071.txt  four_cubes_073.txt  four_cubes_075.txt  four_cubes_076.txt  four_cubes_078.txt  four_cubes_082.txt  four_cubes_083.txt  four_cubes_084.txt  four_cubes_086.txt  four_cubes_087.txt  four_cubes_090.txt  four_cubes_091.txt  four_cubes_093.txt  four_cubes_094.txt  four_cubes_095.txt  four_cubes_096.txt  four_cubes_099.txt  four_cubes_101.txt  (+16 more)
jpeg_reader/: aoa_jpeg.c
scenes/: att_test_scene.txt
